--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
     volumes:
       - ./data/wordpress:/var/www/html
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./src:/var/www/html/wp-content/themes/hello-elementor-child/src
   db:
     image: mysql:5.7
     container_name: my-mysql
