--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,6 @@ services:
     # Use 'build: .' to build the image from the Dockerfile in the current directory
     build: .
     container_name: my-wordpress
-    ports:
-      - "5500:80"
     restart: always
     environment:
       WORDPRESS_DB_HOST: db
@@ -28,3 +26,32 @@ services:
       MYSQL_ROOT_PASSWORD: admin
     volumes:
       - ./data/mysql:/var/lib/mysql
+  nginx:
+    image: nginx:latest
+    container_name: my-nginx-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    restart: always
+    volumes:
+      # Wymaga dodania pliku nginx.conf do konfiguracji proxy
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      # Wymaga wolumenów do przechowywania certyfikatów SSL/TLS
+      - ./ssl:/etc/nginx/ssl
+    depends_on:
+      - wordpress
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      # Wolumeny współdzielone z Nginx do zapisu certyfikatów
+      - ./ssl:/etc/letsencrypt
+      - ./nginx/www:/var/www/certbot
+    # Używamy tylko do ręcznego generowania certyfikatów
+    command: [ "/bin/true" ]
+    # Usunęliśmy to polecenie, ponieważ wymaga to ręcznego uruchomienia
+    # w celu wygenerowania pierwszego certyfikatu.
+
+networks:
+  default:
+    name: wordpress-network
