--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 services:
   wordpress:
-    # Use 'build: .' to build the image from the Dockerfile in the current directory
     build: .
     container_name: my-wordpress
     restart: always
@@ -9,7 +8,6 @@ services:
       WORDPRESS_DB_USER: admin
       WORDPRESS_DB_PASSWORD: admin
       WORDPRESS_DB_NAME: wordpress
-      GCE_URL: http://localhost:5500
     volumes:
       - ./data/wordpress:/var/www/html
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
@@ -34,23 +32,19 @@ services:
       - "443:443"
     restart: always
     volumes:
-      # Wymaga dodania pliku nginx.conf do konfiguracji proxy
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      # Wymaga wolumenów do przechowywania certyfikatów SSL/TLS
-      - ./ssl:/etc/nginx/ssl
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - wordpress
+      - certbot
   certbot:
     image: certbot/certbot
     container_name: certbot
     volumes:
-      # Wolumeny współdzielone z Nginx do zapisu certyfikatów
-      - ./ssl:/etc/letsencrypt
-      - ./nginx/www:/var/www/certbot
-    # Używamy tylko do ręcznego generowania certyfikatów
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     command: [ "/bin/true" ]
-    # Usunęliśmy to polecenie, ponieważ wymaga to ręcznego uruchomienia
-    # w celu wygenerowania pierwszego certyfikatu.
 
 networks:
   default:
